[Bug #19114] Fix for multiple calls of TracePoint#enable